metadata/force-app/main/default/objects/CustomName_QUQSn__c/CustomName_QUQSn__c.object-meta.xml
<CustomObject>
    <description>Description_ujoZw</description>
    <label>CustomLabel_mlfQH</label>
    <nameField>
        <label>CustomLabel_mlfQH</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mlfQHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>