metadata/force-app/main/default/objects/CustomName_QUQSn__c/fields/CustomField_DPXcr__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DPXcr__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVCZUf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>