metadata/force-app/main/default/objects/CustomName_QUQSn__c/fields/CustomField_yWVCq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yWVCq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOGNAa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>